adicionado seção de experiencias

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta."
       />
       <div>
-        <h1>Bacharel em Sistemas de informação <br> e Desenvolvedor Front End.</h1>
+        <h1>Desenvolvedor Front End.</h1>
         <p>
           Bacharelado pela Universidade Estadual do Sudoeste da Bahia (UESB) de
           Jequié-Ba.
@@ -32,6 +32,64 @@
       </div>
     </main>
 
+    <section class="experiencia">
+      <h2 class="titulo-exp">experiências</h2>
 
+      <div class="exe-projetos">
+        <p class="descricao-proj">
+          Desenvolvo pequenos projetos com fins de aprendizado utilizando CSS,
+          HTML e JavaScript. A meta é não parar de estudar e sempre estar em
+          constância.
+        </p>
+
+        <div class="projeto">
+          <h3>Bikcraft</h3>
+          <h3>Linguagens</h3>
+          <p>
+            Projeto que serve de exemplo para uma loja de alguma marca que
+            queira apresentar seu produto
+          </p>
+
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX/UI</li>
+          </ul>
+        </div>
+
+        <div class="projeto">
+          <h3>Bikcraft</h3>
+          <h3>Linguagens</h3>
+          <p>
+            Projeto que serve de exemplo para uma loja de alguma marca que
+            queira apresentar seu produto
+          </p>
+
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX/UI</li>
+          </ul>
+        </div>
+
+        <div class="projeto">
+          <h3>Bikcraft</h3>
+          <h3>Linguagens</h3>
+          <p>
+            Projeto que serve de exemplo para uma loja de alguma marca que
+            queira apresentar seu produto
+          </p>
+
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX/UI</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
