semantica do codigo melhorada

--- a/index.html
+++ b/index.html
@@ -33,61 +33,73 @@
     </main>
 
     <section class="experiencia">
-      <h2 class="titulo-exp">experiências</h2>
 
-      <div class="exe-projetos">
-        <p class="descricao-proj">
-          Desenvolvo pequenos projetos com fins de aprendizado utilizando CSS,
-          HTML e JavaScript. A meta é não parar de estudar e sempre estar em
-          constância.
+      <h2 class="titulo-exp">expe<br>riên<br>cia</h2>
+
+      <div class="projetos">
+        <p>
+          Alguns projetos que demonstram algumas habilidades com as ferramentas
         </p>
 
         <div class="projeto">
-          <h3>Bikcraft</h3>
-          <h3>Linguagens</h3>
-          <p>
-            Projeto que serve de exemplo para uma loja de alguma marca que
-            queira apresentar seu produto
-          </p>
+          <div>
+            <h3>Bikcraft</h3>
 
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>UX/UI</li>
-          </ul>
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>UX/UI</li>
+            </ul>
+          </div>
         </div>
 
         <div class="projeto">
-          <h3>Bikcraft</h3>
-          <h3>Linguagens</h3>
-          <p>
-            Projeto que serve de exemplo para uma loja de alguma marca que
-            queira apresentar seu produto
-          </p>
+          <div>
+            <h3>Bikcraft</h3>
 
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>UX/UI</li>
-          </ul>
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>UX/UI</li>
+            </ul>
+          </div>
         </div>
 
         <div class="projeto">
-          <h3>Bikcraft</h3>
-          <h3>Linguagens</h3>
-          <p>
-            Projeto que serve de exemplo para uma loja de alguma marca que
-            queira apresentar seu produto
-          </p>
+          <div>
+            <h3>Bikcraft</h3>
 
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>UX/UI</li>
-          </ul>
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>UX/UI</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
