--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
     </main>
 
     <section class="experiencia">
-
-      <h2 class="titulo-exp">expe<br>riên<br>cia</h2>
+      <h2 class="titulo-exp">expe<br />riên<br />cia</h2>
 
       <div class="projetos">
-        <p>
-          Alguns projetos que demonstram algumas habilidades com as ferramentas
-        </p>
+        <span class="subtitulo">
+          Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <b>HTML, CSS </b> e <b>JavaScript</b>.
+        </span>
 
         <div class="projeto">
           <div>
