adicionado uns frufru

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cael - Dev</title>
+    <title>Cael - Portfólio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -37,7 +37,7 @@
 
       <div class="projetos">
         <span class="subtitulo">
-          Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <b>HTML, CSS </b> e <b>JavaScript</b>.
+          Desenvolvo pequenos projetos como o Bikcraft utilizando <b>HTML, CSS </b> e <b>JavaScript</b>.
         </span>
 
         <div class="projeto">
@@ -53,10 +53,10 @@
           <div>
             <h3>Linguagens</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>UX/UI</li>
+             <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
             </ul>
           </div>
         </div>
@@ -73,11 +73,11 @@
           <div>
             <h3>Linguagens</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>UX/UI</li>
-            </ul>
+              <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
+             </ul>
           </div>
         </div>
 
@@ -93,10 +93,10 @@
           <div>
             <h3>Linguagens</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>UX/UI</li>
+             <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
             </ul>
           </div>
         </div>
