adicionado responsividade a seção 'experiencia'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
 
     <section class="experiencia">
-      <h2 class="titulo-exp">expe<br />riên<br />cia</h2>
+      <h2 class="titulo-exp">experiência</h2>
 
       <div class="projetos">
         <span class="subtitulo">
