ajustes de cards da seção formação

--- a/index.html
+++ b/index.html
@@ -18,89 +18,141 @@
       </nav>
     </header>
 
-    <main class="intro">
-      <img
-        src="./img/perfil foto.jpg"
-        alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta."
-      />
-      <div>
-        <h1>Desenvolvedor Front End.</h1>
-        <p>
-          Bacharelado pela Universidade Estadual do Sudoeste da Bahia (UESB) de
-          Jequié-Ba.
-        </p>
+    <main>
+      <section class="intro">
+        <img
+          src="./img/perfil foto.jpg"
+          alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta."
+        />
+        <div>
+          <h1>Desenvolvedor Front End.</h1>
+          <p>
+            Bacharelado pela Universidade Estadual do Sudoeste da Bahia (UESB)
+            de Jequié-Ba.
+          </p>
+        </div>
+      </section>
+
+      <section id="experiencia" class="experiencia">
+        <h2 class="titulo-exp">experiência</h2>
+
+        <div class="projetos">
+          <span class="subtitulo">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando
+            <b>HTML, CSS </b> e <b>JavaScript</b>.
+          </span>
+
+          <div class="projeto">
+            <div>
+              <h3>Bikcraft</h3>
+
+              <p>
+                Projeto que serve de exemplo para uma loja de alguma marca que
+                queira apresentar seu produto
+              </p>
+            </div>
+
+            <div>
+              <h3>Linguagens</h3>
+              <ul>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">UI/UX</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="projeto">
+            <div>
+              <h3>Bikcraft</h3>
+
+              <p>
+                Projeto que serve de exemplo para uma loja de alguma marca que
+                queira apresentar seu produto
+              </p>
+            </div>
+            <div>
+              <h3>Linguagens</h3>
+              <ul>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">UI/UX</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="projeto">
+            <div>
+              <h3>Bikcraft</h3>
+
+              <p>
+                Projeto que serve de exemplo para uma loja de alguma marca que
+                queira apresentar seu produto
+              </p>
+            </div>
+            <div>
+              <h3>Linguagens</h3>
+              <ul>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">UI/UX</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="bg-collor">
+
+        <section id="formacao" class="formacao">
+
+          <h2 class="titulo-formacao">formação</h2>
+
+          <div class="cursos">
+            
+            <p class="formacao-descricao">
+              Sou formado em <strong>Sistemas de informação</strong> pela
+              <strong>Universidade Estadual do Sudoeste da Bahia, </strong>uma
+              Universidade pública, tendo inicio em 2018 e termino no inicio de
+              2025. Além disso, procuro me manter atualizado e aprender coisas
+              novas com cursos online.
+            </p>
+
+            <div class="form-cards">
+
+              <div class="cards">
+                <p class="grau-form">Bacharel</p>
+                <p>Sistemas de informação</p>
+                <p class="instituicao">UESB</p>
+              </div>
+
+              <div class="cards">
+                <p class="grau-form">Técnico</p>
+                <p>Téc em inf (2012)</p>
+                <p class="instituicao">ABM</p>
+              </div>
+
+              <div class="cards">
+                <p class="grau-form">Cargo</p>
+                <p>Vagabunda</p>
+                <p class="instituicao">Casa</p>
+              </div>
+
+            </div>
+
+            <div class="cursos-extra">
+              <p class="titulo-cursos">cursos intensivos</p>
+              <div class="extra-cursos">
+                <p class="curso-nome">Programação G8 - ONE</p>
+                <p class="curso-horas">70h</p>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
-
-    <section class="experiencia">
-      <h2 class="titulo-exp">experiência</h2>
-
-      <div class="projetos">
-        <span class="subtitulo">
-          Desenvolvo pequenos projetos como o Bikcraft utilizando <b>HTML, CSS </b> e <b>JavaScript</b>.
-        </span>
-
-        <div class="projeto">
-          <div>
-            <h3>Bikcraft</h3>
-
-            <p>
-              Projeto que serve de exemplo para uma loja de alguma marca que
-              queira apresentar seu produto
-            </p>
-          </div>
-
-          <div>
-            <h3>Linguagens</h3>
-            <ul>
-             <li><a href="#">HTML</a></li>
-              <li><a href="#">CSS</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">UI/UX</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="projeto">
-          <div>
-            <h3>Bikcraft</h3>
-
-            <p>
-              Projeto que serve de exemplo para uma loja de alguma marca que
-              queira apresentar seu produto
-            </p>
-          </div>
-          <div>
-            <h3>Linguagens</h3>
-            <ul>
-              <li><a href="#">HTML</a></li>
-              <li><a href="#">CSS</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">UI/UX</a></li>
-             </ul>
-          </div>
-        </div>
-
-        <div class="projeto">
-          <div>
-            <h3>Bikcraft</h3>
-
-            <p>
-              Projeto que serve de exemplo para uma loja de alguma marca que
-              queira apresentar seu produto
-            </p>
-          </div>
-          <div>
-            <h3>Linguagens</h3>
-            <ul>
-             <li><a href="#">HTML</a></li>
-              <li><a href="#">CSS</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">UI/UX</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
   </body>
 </html>
