Codigo pronto. Responsivo e revisado no lighthouse do navegador

--- a/index.html
+++ b/index.html
@@ -1,167 +1,194 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cael - Portfólio</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <img src="./img/computer-svgrepo-com.svg" alt="" class="logo" />
-      <nav>
-        <ul class="header-menu">
-          <li><a href="#experiencia"> Experiência</a></li>
-          <li><a href="#formacao"> Formação</a></li>
-          <li><a href="#contato"> Contato</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <section class="intro">
-        <img
-          src="./img/perfil foto.jpg"
-          alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta."
-        />
-        <div>
-          <h1>Desenvolvedor Front End.</h1>
-          <p>
-            Bacharelado pela Universidade Estadual do Sudoeste da Bahia (UESB)
-            de Jequié-Ba.
-          </p>
-        </div>
-      </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfólio feito para estudos de html e css, afins de aprimorar as habilidades.">
+  <title>Cael - Portfólio</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-      <section id="experiencia" class="experiencia">
-        <h2 class="titulo-exp">experiência</h2>
+<body>
+  <header class="header">
+    <img src="./img/computer-svgrepo-com.svg" alt="" class="logo" />
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#experiencia"> Experiência</a></li>
+        <li><a href="#formacao"> Formação</a></li>
+        <li><a href="#contato"> Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <div class="projetos">
-          <span class="subtitulo">
-            Desenvolvo pequenos projetos como o Bikcraft utilizando
-            <b>HTML, CSS </b> e <b>JavaScript</b>.
-          </span>
-
-          <div class="projeto">
-            <div>
-              <h3>Bikcraft</h3>
-
-              <p>
-                Projeto que serve de exemplo para uma loja de alguma marca que
-                queira apresentar seu produto
-              </p>
-            </div>
-
-            <div>
-              <h3>Linguagens</h3>
-              <ul>
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">UI/UX</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="projeto">
-            <div>
-              <h3>Bikcraft</h3>
-
-              <p>
-                Projeto que serve de exemplo para uma loja de alguma marca que
-                queira apresentar seu produto
-              </p>
-            </div>
-            <div>
-              <h3>Linguagens</h3>
-              <ul>
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">UI/UX</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="projeto">
-            <div>
-              <h3>Bikcraft</h3>
-
-              <p>
-                Projeto que serve de exemplo para uma loja de alguma marca que
-                queira apresentar seu produto
-              </p>
-            </div>
-            <div>
-              <h3>Linguagens</h3>
-              <ul>
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">UI/UX</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <div class="bg-collor">
-        <section id="formacao" class="formacao">
-          <h2 class="titulo-formacao">formação</h2>
-
-          <div class="cursos">
-            <p class="formacao-descricao">
-              Sou formado em <strong>Sistemas de informação</strong> pela
-              <strong>Universidade Estadual do Sudoeste da Bahia, </strong>uma
-              Universidade pública, tendo inicio em 2018 e termino no inicio de
-              2025. Além disso, procuro me manter atualizado e aprender coisas
-              novas com cursos online.
-            </p>
-
-            <ul class="faculdade-lista">
-              <li class="faculdade">
-                <span class="faculdade-tipo">Bacharel</span>
-                <h3 class="faculdade-curso">Sistemas de informação</h3>
-                <span class="facuçdade-instituicao">UESB</span>
-              </li>
-
-              <li class="faculdade">
-                <span class="faculdade-tipo">Bacharel</span>
-                <h3 class="faculdade-curso">Sistemas </h3>
-                <span class="facuçdade-instituicao">UESB</span>
-              </li>
-
-              <li class="faculdade">
-                <span class="faculdade-tipo">Bacharel</span>
-                <h3 class="faculdade-curso">Sistemas de informação</h3>
-                <span class="facuçdade-instituicao">UESB</span>
-              </li>
-            </ul>
-
-            <div class="formacao-extra">
-              <div class="cursos">
-                <h3>Cursos intensivos</h3>
-                <ul>
-                  <li>HTML e CSS<span>56horas</span></li>
-                  <li>HTML e CSS<span>56horas</span></li>
-                  <li>HTML e CSS<span>56horas</span></li>
-                  <li>HTML e CSS<span>56horas</span></li>
-                </ul>
-              </div>
-
-              <div class="idiomas">
-                <h3>Idiomas</h3>
-                <ul>
-                  <li>Inglês<span>intermediario</span></li>
-                  
-                </ul>
-              </div>
-
-              
-            </div>
-          </div>
-        </section>
+  <main>
+    <section class="intro">
+      <img src="./img/perfil foto.jpg"
+        alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta." width="400px" height="400px" />
+      <div>
+        <h1>Desenvolvedor Front End.</h1>
+        <p>
+          Bacharelado pela Universidade Estadual do Sudoeste da Bahia (UESB)
+          de Jequié-Ba.
+        </p>
       </div>
-    </main>
-  </body>
+    </section>
+
+    <section id="experiencia" class="experiencia">
+      <h2 class="titulo-exp">experiência</h2>
+
+      <div class="projetos">
+        <span class="subtitulo">
+          Desenvolvo pequenos projetos como o Bikcraft utilizando
+          <b>HTML, CSS </b> e <b>JavaScript</b>.
+        </span>
+
+        <div class="projeto">
+          <div>
+            <h3>Bikcraft</h3>
+
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="projeto">
+          <div>
+            <h3>Bikcraft</h3>
+
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="projeto">
+          <div>
+            <h3>Bikcraft</h3>
+
+            <p>
+              Projeto que serve de exemplo para uma loja de alguma marca que
+              queira apresentar seu produto
+            </p>
+          </div>
+          <div>
+            <h3>Linguagens</h3>
+            <ul>
+              <li><a href="#">HTML</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">UI/UX</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="bg-collor">
+      <section id="formacao" class="formacao">
+        <h2 class="titulo-formacao">formação</h2>
+
+        <div class="cursos">
+          <p class="formacao-descricao">
+           Formado em <strong>Sistemas de informação</strong> pela
+            <strong>Universidade Estadual do Sudoeste da Bahia, </strong>uma
+            Universidade pública, tendo inicio em 2018 e termino no inicio de
+            2025. Além disso, sempre em busca de aprender algo novo.
+          </p>
+
+          <ul class="faculdade-lista">
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">Sistemas de informação</h3>
+              <span class="facuçdade-instituicao">UESB</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">Sistemas </h3>
+              <span class="facuçdade-instituicao">UESB</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">Sistemas de informação</h3>
+              <span class="facuçdade-instituicao">UESB</span>
+            </li>
+          </ul>
+
+          <div class="formacao-extra">
+            <div class="cursos">
+              <h3>Cursos intensivos</h3>
+              <ul>
+                <li>HTML e CSS<span>56horas</span></li>
+                <li>HTML e CSS<span>56horas</span></li>
+                <li>HTML e CSS<span>56horas</span></li>
+                <li>HTML e CSS<span>56horas</span></li>
+              </ul>
+            </div>
+
+            <div class="idiomas">
+              <h3>Idiomas</h3>
+              <ul>
+                <li>Inglês<span>intermediário</span></li>
+
+              </ul>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer class="contato-container" id="contato">
+
+    <div class="contato">
+
+      <p class="descricao-contato">Estou disponivel no momento para trabalhar em novos projetos.
+        Entre em contato comigo para termos uma conversa! &#128075
+      </p>
+
+      <ul>
+        <li><a href="mailto:caelsantos71@gmail.com"></a> CaelSantos71@gmail.com</li>
+        <li>+55 73 - 9.99117-2305</li>
+      </ul>
+
+      <span class="contato-direitos">
+        Todos direitos reservados.
+      </span>
+
+    </div>
+  </footer>
+
+</body>
+
+
+
+
+
+
+
 </html>
