--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfólio feito para estudos de html e css, afins de aprimorar as habilidades.">
   <title>Cael - Portfólio</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.min.css" />
 </head>
 
 <body>
