mudancças de links e arquivo css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfólio feito para estudos de html e css, afins de aprimorar as habilidades.">
   <title>Cael - Portfólio</title>
-  <link rel="stylesheet" href="./css/style.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -45,11 +45,10 @@
 
         <div class="projeto">
           <div>
-            <h3>Bikcraft</h3>
+            <h3> <a href="https://github.com/CaelSS/bikcraft-bikes-eletricas.git" target="_blank">Bikcraft</a></h3>
 
             <p>
-              Projeto que serve de exemplo para uma loja de alguma marca que
-              queira apresentar seu produto
+              Este é o meu projeto preferido que serve de exemplo para uma loja de bikes.
             </p>
           </div>
 
@@ -66,11 +65,10 @@
 
         <div class="projeto">
           <div>
-            <h3>Bikcraft</h3>
+            <h3><a href="https://github.com/CaelSS/Animais-fantasticos.git" target="_blank">Animais fantásticos</a></h3>
 
             <p>
-              Projeto que serve de exemplo para uma loja de alguma marca que
-              queira apresentar seu produto
+              Um projeto que serviu de estudo para melhorar conhecimentos em javaScript.
             </p>
           </div>
           <div>
