nova lista de certificações

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <main>
     <section class="intro">
       <img src="./img/perfil foto.jpg"
-        alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta." width="400px" height="400px" />
+        alt="Foto do perfil pessoal, utilizando camisa branca, barba baixa, oculos quadrado e brincos nas orelhas. Pele preta."
+        width="400px" height="400px" />
       <div>
         <h1>Desenvolvedor Front End.</h1>
         <p>
@@ -84,7 +85,7 @@
 
         <div class="projeto">
           <div>
-            <h3>Bikcraft</h3>
+            <h3><a href="https://github.com/CaelSS?tab=repositories" target="_blank"> Mais projetos -> </a></h3>
 
             <p>
               Projeto que serve de exemplo para uma loja de alguma marca que
@@ -98,6 +99,9 @@
               <li><a href="#">CSS</a></li>
               <li><a href="#">JavaScript</a></li>
               <li><a href="#">UI/UX</a></li>
+              <li><a href="#">Java</a></li>
+              <li><a href="#">C++</a></li>
+              <li><a href="#">...</a></li>
             </ul>
           </div>
         </div>
@@ -110,7 +114,7 @@
 
         <div class="cursos">
           <p class="formacao-descricao">
-           Formado em <strong>Sistemas de informação</strong> pela
+            Formado em <strong>Sistemas de informação</strong> pela
             <strong>Universidade Estadual do Sudoeste da Bahia, </strong>uma
             Universidade pública, tendo inicio em 2018 e termino no inicio de
             2025. Além disso, sempre em busca de aprender algo novo.
@@ -140,10 +144,29 @@
             <div class="cursos">
               <h3>Cursos intensivos</h3>
               <ul>
-                <li>HTML e CSS<span>56horas</span></li>
-                <li>HTML e CSS<span>56horas</span></li>
-                <li>HTML e CSS<span>56horas</span></li>
-                <li>HTML e CSS<span>56horas</span></li>
+                <li>Front End para Iniciantes - ONE<span>72 horas</span></li>
+                <li>JavaScript - Origamid <span>23 horas</span></li>
+                <li>Flex-box, Grid Layout - ORIGAMID <span>20 horas </span></li>
+                <li>UX Design & UI Design - ORIGAMID<span>56 horas</span></li>
+                <li>REACT - ORIGAMID <span>Em andamento... </span></li>
+                <li>VUE 3 - ORIGAMID <span>Em andamento... </span></li>
+                <li>Programação - ONE<span>70 horas</span></li>
+                <li>Praticando Java: Challenge Conversor de Moedas<span>10 horas</span></li>
+                <li>Foco: Trazendo Mais Resultados para o Dia a Dia<span>10 horas</span></li>
+                <li>Desenvolvimento Pessoal G8 - ONE<span>36 horas</span></li>
+                <li>HTML e CSS: Trabalhando com Responsividade e Publicação de Projetos<span>6 horas</span></li>
+                <li>HTML e CSS: Cabeçalho, Footer e Variáveis CSS<span>6 horas</span></li>
+                <li>Hábitos: Da Produtividade às Metas Pessoais<span>6 horas</span></li>
+                <li>HTML e CSS: Ambientes de Desenvolvimento, Estrutura de Arquivos e Tags<span>5 horas</span></li>
+                <li>Git e GitHub: Compartilhando e Colaborando em Projetos<span>5 horas</span></li>
+                <li>ChatGPT: Otimizando a Qualidade dos Resultados<span>5 horas</span></li>
+                <li>Aprender a Aprender: Técnicas para Seu Autodesenvolvimento<span>5 horas</span></li>
+                <li>Praticando Lógica de Programação: Challenge Amigo Secreto<span>5 horas</span></li>
+                <br>
+                <h3>Proximos passos: </h3>
+                <li> TAILWIND - origamid <span>05/12/2025</span></li>
+                <li> BOOTSRAP - origamid <span>05/12/2025</span></li>
+                
               </ul>
             </div>
 
