--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="projetos">
         <span class="subtitulo">
           Desenvolvo pequenos projetos como o Bikcraft utilizando
-          <b>HTML, CSS </b> e <b>JavaScript</b>.
+          <b>HTML, CSS </b> e <b>JavaScript</b>, como:
         </span>
 
         <div class="projeto">
           <div>
-            <h3> <a href="https://github.com/CaelSS/bikcraft-bikes-eletricas.git" target="_blank">Bikcraft</a></h3>
+            <h3> <a href="https://bikcraft-bikes-eletricas.vercel.app/" target="_blank">Bikcraft</a></h3>
 
             <p>
               Este é o meu projeto preferido que serve de exemplo para uma loja de bikes.
@@ -69,7 +69,7 @@
             <h3><a href="https://github.com/CaelSS/Animais-fantasticos.git" target="_blank">Animais fantásticos</a></h3>
 
             <p>
-              Um projeto que serviu de estudo para melhorar conhecimentos em javaScript.
+              Um projeto que serviu de estudo para melhorar conhecimentos em javaScript:
             </p>
           </div>
           <div>
@@ -99,9 +99,7 @@
               <li><a href="#">CSS</a></li>
               <li><a href="#">JavaScript</a></li>
               <li><a href="#">UI/UX</a></li>
-              <li><a href="#">Java</a></li>
-              <li><a href="#">C++</a></li>
-              <li><a href="#">...</a></li>
+  
             </ul>
           </div>
         </div>
@@ -165,7 +163,7 @@
                 <br>
                 <h3>Proximos passos: </h3>
                 <li> TAILWIND - origamid <span>05/12/2025</span></li>
-                <li> BOOTSRAP - origamid <span>05/12/2025</span></li>
+                <li> BOOTSTRAP - origamid <span>05/12/2025</span></li>
                 
               </ul>
             </div>
